updated French translation

--- a/po/wesnoth-dw/fr.po
+++ b/po/wesnoth-dw/fr.po
@@ -1,11 +1,14 @@
+#
+# Pascal Guillaume <guillaume.pascal43@laposte.net>, 2011.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-01-22 19:50+0100\n"
-"Last-Translator: Gérard Bodin <gnork@orange.fr>\n"
-"Language-Team: none\n"
+"PO-Revision-Date: 2011-08-29 17:39+0200\n"
+"Last-Translator: Pascal Guillaume <guillaume.pascal43@laposte.net>\n"
+"Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -273,7 +276,7 @@ msgstr ""
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:348
 msgid "What manner of creatures were they?"
-msgstr "Quel genre de créatures était-ce ?"
+msgstr "Quel genre de créatures était-ce ?"
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:353
@@ -284,7 +287,7 @@ msgid ""
 "rottenness."
 msgstr ""
 "Je n'en ai jamais vues de pareilles. C'était comme des hommes, mais sans "
-"peau. Nos lances les transperçaient sans effet : ils se <i>moquaient</i> de "
+"peau. Nos lances les transperçaient sans effet : ils se <i>moquaient</i> de "
 "nos armes. Et rien dans la mer n'a une telle odeur de terre humide et de "
 "pourriture."
 
@@ -361,7 +364,7 @@ msgstr ""
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:615
 msgid "He is raising the dead from every village!"
-msgstr "Il est en train de relever les morts de chaque village !"
+msgstr "Il est en train de relever les morts de chaque village !"
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:619
@@ -394,7 +397,7 @@ msgid ""
 msgstr ""
 "Kai Krellis s'inquiétait d'un possible retour des morts-vivants, alors il "
 "décida d'en apprendre le plus possible à leur sujet. Son seul indice était "
-"le nom prononcé par le nécromancien : <i>« Lord Ravanal »</i>. Il envoya ses "
+"le nom prononcé par le nécromancien : <i>« Lord Ravanal »</i>. Il envoya ses "
 "nageurs les plus rapides le long de la côte au nord et au sud pour en savoir "
 "plus sur ce Ravanal. Les nouvelles qu'ils rapportèrent n'étaient pas bonnes."
 
@@ -649,7 +652,6 @@ msgstr ""
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:473
 #, fuzzy
-#| msgid "Look! There is a bat cowering in the corner here."
 msgid "Look! There is a massive bat back here."
 msgstr "Regardez ! Il y a une chauve-souris tapie dans le coin là."
 
@@ -705,7 +707,6 @@ msgstr "Chauve-souris amicale"
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:570
 #, fuzzy
-#| msgid "Look! There is a bat cowering in the corner here."
 msgid "And look! There is a bat cowering in the corner here."
 msgstr "Regardez ! Il y a une chauve-souris tapie dans le coin là."
 
@@ -767,14 +768,12 @@ msgstr ""
 #. [unit]: type=Walking Corpse, id=Undead Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:660
 #, fuzzy
-#| msgid "Undead"
 msgid "Undead Bat"
 msgstr "Morts-vivants"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:669
 #, fuzzy
-#| msgid "Look! There is a bat cowering in the corner here."
 msgid ""
 "Look! There is a bat in the corner here. It is moving, but it looks half "
 "dead."
@@ -805,14 +804,12 @@ msgstr ""
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:706
 #, fuzzy
-#| msgid "Look, this chest was in his tent. It is filled with gold!"
 msgid "He had a chest in his tent, too. It is filled with gold!"
 msgstr "Regardez, il y avait ce coffre dans sa tente. Il est plein d'or !"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:718
 #, fuzzy
-#| msgid "You receive 100 gold."
 msgid "You receive 120 gold."
 msgstr "Vous gagnez 100 pièces d'or."
 
@@ -893,16 +890,20 @@ msgstr "Vrunt"
 
 #. [message]: speaker=Gashnok
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:203
+#, fuzzy
 msgid ""
 "Smells like lots of death in the south. There must be a good feast near that "
 "merman town."
 msgstr ""
+"Il semble qu'il y ait beaucoup de morts dans le sud. Il doit y avoir un bon "
+"festin près de cette ville triton."
 
 #. [message]: speaker=Vrunt
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:208
 #, fuzzy
 msgid "Let’s hope those wild wolves over there don’t get to it before we do."
-msgstr "Espérons que ces loups sauvages ne feront pas un festin avant nous."
+msgstr ""
+"Espérons que ces loups sauvages, là-bas, ne feront pas un festin avant nous."
 
 #. [message]: speaker=Gashnok
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:213
@@ -911,13 +912,13 @@ msgid ""
 "Hold on...It looks like a better feast is coming our way! Fresh fish, boys! "
 "Go get it."
 msgstr ""
-"Tiens donc... On dirait qu'un festin vient vers nous ! Du poisson frais les "
-"gars ! Allons nous servir."
+"Tiens donc... On dirait qu'un meilleur festin vient vers nous ! Du poisson "
+"frais les gars ! Allons nous servir."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:218
 msgid "Beware, people!"
-msgstr "Attention !"
+msgstr "Attention !"
 
 #. [message]: speaker=$unit.id
 #: data/campaigns/Dead_Water/scenarios/03_Wolf_Coast.cfg:241
@@ -1072,12 +1073,12 @@ msgid ""
 msgstr ""
 "Si vous voulez parler de cet ondin, Teelöa, il ne vous appartient plus. "
 "Personne ne devrait appartenir à quelqu'un. Relâchez tous vos esclaves ou la "
-"fureur des ondins s'abattra sur vous !"
+"fureur des ondins s'abattra sur vous !"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:393
 msgid "A brave and kindhearted choice! I cannot abide slavery."
-msgstr "Un choix brave et généreux ! Je ne supporte pas l'esclavagisme."
+msgstr "Un choix brave et généreux ! Je ne supporte pas l'esclavagisme."
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:398
@@ -1174,8 +1175,8 @@ msgid ""
 "Hear this! Slaves, the merfolk have sworn war against your tormentors. If "
 "you would be free, arise and seize your liberty!"
 msgstr ""
-"Écoutez cela ! Esclaves, les ondins ont juré de combattre vos bourreaux. Si "
-"vous voulez être libres, levez-vous et emparez-vous de votre liberté !"
+"Écoutez cela ! Esclaves, les ondins ont juré de combattre vos bourreaux. Si "
+"vous voulez être libres, levez-vous et emparez-vous de votre liberté !"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/04_Slavers.cfg:521
@@ -1627,12 +1628,12 @@ msgstr "Regarde mon bébé, voici de la bonne nourriture !"
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/06_Uncharted_Islands.cfg:204
 msgid "Or...is he <i>talking</i> to it?!"
-msgstr "Ou... est-il en train de lui <i>parler</i> ?!"
+msgstr "Ou... est-il en train de lui <i>parler</i> ?!"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/06_Uncharted_Islands.cfg:208
 msgid "It is worse than that. I think <i>we</i> are the treat!"
-msgstr "C'est pire que ça. Je pense que <i>nous</i> sommes le repas !"
+msgstr "C'est pire que ça. Je pense que <i>nous</i> sommes le repas !"
 
 #. [message]: speaker=Growloff
 #: data/campaigns/Dead_Water/scenarios/06_Uncharted_Islands.cfg:212
@@ -1771,7 +1772,7 @@ msgstr "La sorcière ondine ?"
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/07_Bilheld.cfg:169
 msgid "Witch?!"
-msgstr "Sorcière ?!"
+msgstr "Sorcière ?!"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/07_Bilheld.cfg:173
@@ -1943,25 +1944,33 @@ msgstr "Vous connaissiez mes grand-parents ?"
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:201
 #, fuzzy
 msgid "Actually, Tyegëa is your grandmother."
-msgstr "Je suis votre grand-mère."
+msgstr "En fait, Tyegëa est votre grand-mère."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:205
+#, fuzzy
 msgid "What? How is that possible?"
-msgstr ""
+msgstr "Quoi ? Comment cela est possible ?"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:209
+#, fuzzy
 msgid ""
 "When your grandfather married Indress, he did not know that Tyegëa had "
 "already born him a son. When she delivered your father to Jotha, your "
 "grandmother Indress agreed to keep it secret and raise the infant as her own."
 msgstr ""
+"Quand votre grand-père s'est marié avec Indress, il ne savait pas que Tyegëa "
+"lui avait déjà donné un fils. Quand elle accoucha de votre père à Jotha, "
+"votre grand-mère Indress décida de garder le secret et d'élever l'enfant "
+"comme le sien."
 
 #. [message]: speaker=Tyegea
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:213
+#, fuzzy
 msgid "That was quite a scandal, too, but I was not cut out to be a mother."
 msgstr ""
+"Cela a été tout un scandale, aussi, mais je n'étais pas faite pour être mère."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:217
@@ -2020,12 +2029,11 @@ msgstr ""
 "demanda son aide pour enchanter une épée afin que celle-ci brille "
 "continuellement d'une flamme magique, elle dévoua tous ses talents pour "
 "façonner l'arme. Plus tard, Agnovon utilisa l'épée pour défaire le propre "
-"peuple d'Imirna et voler toutes ses richesses. Dans son chagrin, Imirna "
+"peuple d'Imirna et voler leurs richesses. Dans son chagrin, Imirna "
 "s'empoisonna."
 
 #. [message]: speaker=Tyegea
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:237
-#, fuzzy
 msgid ""
 "I have long desired to see the sword returned to the merfolk to whom it "
 "should belong. If you retrieve it, you would prove yourself to be worthy of "
@@ -2555,8 +2563,10 @@ msgstr ""
 
 #. [message]: speaker=Dorcyn
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:553
+#, fuzzy
 msgid "I’ll join you right now! That monster is just unnatural."
 msgstr ""
+"Je vais vous rejoindre maintenant ! Ce monstre est complètement surnaturel."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/10_The_Flaming_Sword.cfg:627
@@ -2634,7 +2644,7 @@ msgid ""
 "You haven’t left yet? My patience is at an END! Witness the POWER of the "
 "Flaming Sword of Caladon! I call on the ELEMENT OF FIRE to DO MY BIDDING!"
 msgstr ""
-"Vous n'êtes pas encore partis ? Ma patience est à BOUT ! Soyez témoins du "
+"Vous n'êtes pas encore partis ? Ma patience est à BOUT ! Soyez témoins du "
 "POUVOIR de l'Épée enflammée de Caladon ! J'appelle l'ÉLÉMENT DU FEU à MON "
 "SERVICE !"
 
@@ -3077,10 +3087,11 @@ msgid ""
 "(which is a tale for another time!) they presided at his wedding."
 msgstr ""
 "Gwabbo et Cylanna restaient souvent ensemble et, quand Kai Krellis trouva "
-"une épouse (ce qui est une autre histoire !), ils présidèrent à son mariage."
+"une épouse (ce qui est une autre histoire !), ils présidèrent à son mariage."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/13_Epilogue.cfg:118
+#, fuzzy
 msgid ""
 "Teelöa returned to his home where he had been captured by the saurians. He "
 "was delighted to find that many of his family members had also returned. He "
@@ -3112,8 +3123,8 @@ msgid ""
 msgstr ""
 "Krellis lui-même se maria quelques années plus tard et engendra des fils "
 "forts et de belles filles. Quand les orcs qui avaient appris à craindre son "
-"père testèrent le peuple de Jotha de nouveau, ils apprirent à le craindre "
-"encore plus."
+"père testèrent Jotha de nouveau, ils apprirent à craindre Kai Krellis encore "
+"plus."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/13_Epilogue.cfg:150
@@ -3152,7 +3163,6 @@ msgstr "queue"
 #. [set_variable]
 #: data/campaigns/Dead_Water/units/Brawler.cfg:197
 #, fuzzy
-#| msgid "stunned"
 msgid "female^stunned"
 msgstr "assommé"
 
@@ -3232,7 +3242,6 @@ msgstr "Soldat roi"
 
 #. [unit_type]: id=Merman Soldier King, race=merman
 #: data/campaigns/Dead_Water/units/Soldier_King.cfg:29
-#, fuzzy
 msgid ""
 "A king who is skilled at combat commands great respect — especially among "
 "soldiers. His strength allows him to wield powerful weapons and move "
@@ -3408,8 +3417,6 @@ msgstr ""
 
 #: data/campaigns/Dead_Water/utils/specials.cfg:4
 #, fuzzy
-#| msgid ""
-#| " This unit is able stun its enemies, disrupting their zones of control."
 msgid ""
 " This unit is able to stun its enemies, disrupting their zones of control."
 msgstr ""
@@ -3424,9 +3431,6 @@ msgstr "assomme"
 #. [damage]: id=tail_stun
 #: data/campaigns/Dead_Water/utils/specials.cfg:10
 #, fuzzy
-#| msgid ""
-#| "This attack hits so hard that the defender is dazed and can no longer "
-#| "enforce a zone of control. The effect wears off on the defenders next turn"
 msgid ""
 "This attack hits so hard that the defender is dazed and can no longer "
 "enforce a zone of control. The effect wears off on the defender’s next turn."
