--- a/po/wesnoth-thot/fr.po
+++ b/po/wesnoth-thot/fr.po
@@ -1,13 +1,14 @@
 #
 # Benoît Timbert <benoit.timbert@free.fr>, 2011.
+# Pascal Guillaume <guillaume.pascal43@laposte.net>, 2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.4.2+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-04-04 21:19+0200\n"
-"Last-Translator: Benoît Timbert <benoit.timbert@free.fr>\n"
+"PO-Revision-Date: 2011-08-29 17:50+0200\n"
+"Last-Translator: Pascal Guillaume <guillaume.pascal43@laposte.net>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -346,12 +347,6 @@ msgstr "Le Marteau de Thursagan ?"
 
 #. [message]: speaker=Angarthing_dummy
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/02_Reclaiming_the_Past.cfg:128
-#, fuzzy
-#| msgid ""
-#| "Aye. The very tool with which our greatest runesmith made the Scepter of "
-#| "Fire. But it is ancient, far older than Thursagan; he was but the last to "
-#| "wield it, and our oldest histories hint that this very hammer was used to "
-#| "forge the dwarves themselves in the heart of the earth."
 msgid ""
 "Aye. The very tool with which our greatest runesmith made the Sceptre of "
 "Fire. But it is ancient, far older than Thursagan; he was but the last to "
@@ -618,7 +613,6 @@ msgstr ""
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/03_Strange_Allies.cfg:204
-#, fuzzy
 msgid ""
 "I’m surprised myself that so many of the orcish tribes came over to the "
 "Alliance. Not so strange to see humans raiding us, worse luck."
@@ -686,7 +680,6 @@ msgstr ""
 # Damien : pour tenter de respecter le jeu de mot anglais toll/troll (Drôle/Troll).
 #. [scenario]: id=04_Troll_Bridge
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/04_Troll_Bridge.cfg:3
-#, fuzzy
 msgid "Troll Bridge"
 msgstr "Troll de pont"
 
@@ -988,7 +981,7 @@ msgstr ""
 #. [message]: speaker=Ratheln
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/06_High_Pass.cfg:302
 msgid "This is no fit death for a mage of fire!"
-msgstr "Ce n'est pas une mort digne d'un mage rouge !"
+msgstr "Ce n'est pas une mort digne d'un mage rouge !"
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/06_High_Pass.cfg:307
@@ -1294,6 +1287,8 @@ msgstr ""
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg:175
 msgid "It’s too quiet... and I think I smell traces of smoke on the wind."
 msgstr ""
+"C'est trop calme... et puis je crois sentir une odeur de fumée portée par la "
+"brise."
 
 #. [message]: speaker=Ratheln
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg:179
@@ -1301,17 +1296,21 @@ msgid ""
 "I do not sense hostile magic in the vicinity. But there has been fire near "
 "here recently, and not a clean one."
 msgstr ""
+"Je ne perçois pas de magie hostile dans les alentours, mais il y a eu "
+"récemment un incendie tout près d'ici, et il n'était pas naturel."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg:183
 msgid ""
 "Look sharp for the inhabitants here. They might have something to tell us."
 msgstr ""
+"Cherchez soigneusement les habitants de la région. Ils pourraient peut-être "
+"nous renseigner."
 
 #. [unit]: type=Peasant, id=Ollin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg:208
 msgid "Ollin"
-msgstr ""
+msgstr "Ollin"
 
 #. [message]: speaker=Ollin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg:216
@@ -1635,7 +1634,7 @@ msgstr "Allons offrir la tête de cet orc comme cadeau de bienvenue."
 #. [message]: speaker=Dulcatulos
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/10_The_Siege_of_Kal_Kartha.cfg:272
 msgid "Kal Kartha shall not fall!"
-msgstr "Kal Kartha ne tombera pas !"
+msgstr "Kal Kartha ne tombera pas !"
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/10_The_Siege_of_Kal_Kartha.cfg:284
@@ -2058,7 +2057,7 @@ msgid ""
 "he could have slipped into any of them."
 msgstr ""
 "Voici la Grande Galerie, avec une série de petites chambres à gauche et à "
-"droite sur toute sa longueur ; il a pu se faufiler dans n'importe laquelle."
+"droite sur toute sa longueur ; il a pu se faufiler dans n'importe laquelle."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:477
@@ -2138,7 +2137,7 @@ msgstr "Je pense entendre des bruits devant nous..."
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:655
 msgid "Fresh blood! Exactly what I need to complete the rite."
 msgstr ""
-"Du sang frais ! Exactement ce dont j'avais besoin pour parachever le rituel."
+"Du sang frais ! Exactement ce dont j'avais besoin pour parachever le rituel."
 
 #. [message]: speaker=unit
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:676
@@ -2610,10 +2609,6 @@ msgstr ""
 
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:4
 #, fuzzy
-#| msgid ""
-#| "The presence of this unit inspires own units next to it to deal more "
-#| "damage in combat, though this only applies to units of lower or equal "
-#| "level."
 msgid ""
 " The presence of this unit inspires own units next to it to deal more damage "
 "in combat, though this only applies to units of lower or equal level."
